--- a/CourseWork/app/src/main/res/values/strings.xml
+++ b/CourseWork/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="fragment_streams_type_all">All</string>
     <string name="fragment_profile_onlineStatus">online</string>
     <string name="fragment_profile_offlineStatus">offline</string>
+    <string name="message_viewgroup_my_message_indicator"> (Вы)</string>
 </resources>
