--- a/CourseWork/app/src/main/res/values/strings.xml
+++ b/CourseWork/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="worker_success_updating">База данных успешно обновлена</string>
     <string name="uri_browsing_chooser">Выберите браузер</string>
     <string name="file_uploaded_template">%1$s [%2$s](%3$s)</string>
+    <string name="error_mock">Это тестовое исключение</string>
+    <string name="error_unexpected">Неизвестная ошибка</string>
+    <string name="error_network">Проблемы с соединением</string>
+    <string name="error_authenticated">Проблема с аутентификацией</string>
+    <string name="error_server">Произошла ошибка на сервере. Попробуйте позже</string>
+    <string name="error_too_many_requests">Слишком много запросов в секунду</string>
+    <string name="error_unknown_host">Отсутствует соединение</string>
 </resources>
