--- a/CourseWork/app/src/main/res/values/strings.xml
+++ b/CourseWork/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CourseWork</string>
+    <string name="app_name">Tulip</string>
     <string name="chat_input_hint">Написать сообщение</string>
     <string name="fragment_searches_searchInput_hint">Search…</string>
     <string name="fragment_people_searchInput_hint">Users…</string>
